Don't use KIO copy and QTemporaryFile to load xml definition files.

Since files are usually (maybe always?) local anyway, there's not
much reason to copy the file to a temporary file.
This also fixes QDomDocument::setContent failing on an empty file
when the QTemporaryFile is somehow empty after the copy has finished.

Reviewed by: Ian Wadham <iandw.au@gmail.com>
BUG: 405422

(cherry picked from commit 40e80d73866634c954dce212f2da43cd0fdce8d6)